required changes for users to migrate from one version of MITAB to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the CVS log comments.


CHANGES - Current Version:
--------------------------


Version 1.5.0 (2006-02-16)
--------------------------

- Updated contrib/mitab_dyn.pas with new C API functions. Note that other
  definition files for VB and .NET have *not* been updated for this release.

- Fixed crash when attempting to write TABPolyline object with an invalid
  geometry (GDAL bug 1059)

- cast strstr() results as per email from Charles Savage for VC8.

- Fixed build problem (link with -ldl not available) on MacOSX (bug 1167)

- Fixed problem with white space parsing in mitab_miffile.cpp (bug GDAL:954)

- layers with just regions can't be set as type wkbPolygon because they may
  have multipolygons (bug GDAL:958)
    http://bugzilla.remotesensing.org/show_bug.cgi?id=958

- Fixed support for multi character delimiters in .mid file (bug 1266)

- Fixed reading Mills.mif (TABPoint::ReadGeometryFromMIFFFile()), the check
  for SYMBOL didn't check if pszLine was non-NULL.

- Fixed memory leak of m_pszDelimiter in mitab_middatafile.cpp.

- Fixed OGR problems with setting bounds on MIF files, and wrong bounds
  on tab files (bug 1198)


Version 1.5.0-beta1 (2005-10-07)
--------------------------------

- Added read/write support for MapInfo Collections in MIF and TAB (bug 1126)
  (Thanks to funding from Comcast (Andy Canfield) and an initial patch and
   analysis of collections by Jim Hope of Innogistic Software)

- New C API methods to access collection members (bug 1126):
     - mitab_c_get_collection_region_ref()
     - mitab_c_get_collection_polyline_ref()
     - mitab_c_get_collection_multipoint_ref()
     - mitab_c_set_collection_region()
     - mitab_c_set_collection_polyline()